--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-stamp",
 	"displayName": "code stamp",
 	"publisher": "Harikrishnan",
-	"icon": "images/extensionlogo.png",
+	"icon": "images/logocodestamp.png",
 	"description": "",
 	"version": "0.0.1",
 	"engines": {
